--- a/css/main.scss
+++ b/css/main.scss
@@ -5,7 +5,4 @@
 
 $base-url: "{{site.baseurl}}";
 // Import partials from `sass_dir` (defaults to `_sass`)
-@import
-  "../bower_components/bootstrap/scss/bootstrap",
-  "fastly-web.min",
-  "main";
+@import "main";
