--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="294" />
   <meta property="og:image:height" content="71" />
+  <link rel="stylesheet" href="{{ "/css/fastly-web.min.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <script src="/bower_components/jquery/dist/jquery.min.js"></script>
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
@@ -27,6 +28,5 @@
       {{ content }}
     </div>
   </div>
-
 </body>
 </html>
