--- a/css/main.scss
+++ b/css/main.scss
@@ -5,4 +5,5 @@
 
 $base-url: "{{site.baseurl}}";
 // Import partials from `sass_dir` (defaults to `_sass`)
+@import "../bower_components/bootstrap/scss/variables";
 @import "main";
