--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,10 @@
+$fastly-red: #E82C2A;
+$fastly-blue: #147FBD;
+$fastly-grey-dark: #7C7C7C;
+$fastly-blue-lightest: #CEECF9;
+$break-sm: map-get($grid-breakpoints, 'sm');
+$break-lg: map-get($grid-breakpoints, 'lg');
+
 body {
   padding-top: 0;
 }
@@ -30,120 +37,125 @@ h4 {
     font-size: 56px;
   }
 }
-
 .navigation {
   display: flex;
   justify-content: space-between;
   min-height: 180px;
   padding: 4rem 0;
-  background: linear-gradient(to bottom, #0071bc 2px, white 2px);
-  background-size: 10%;
+  background: linear-gradient(180deg, transparent, $fastly-blue, transparent);
+  background-position: 50%;
   background-repeat: repeat-x;
-  background-position: 0 90px;
+  background-size: 3px 3px;
   .unit {
     position: relative;
-    @media only screen and (max-width : 990px){
+    @media only screen and (max-width: $break-lg){
       width: 50%;
       text-align: right;
-      padding-right: 30px;
+      padding-right: 5px;
+    }
+    @media only screen and (max-width:  $break-sm){
+      width: 100%;
+      text-align: center;
+      padding-right: 5px;
+      margin-bottom: 20px;
+      background: white;
     }
   }
   .unit:nth-of-type(2n+2) {
     align-self: flex-end;
-    @media only screen and (max-width : 990px){
+    @media only screen and (max-width: $break-lg){
       text-align: left;
-      padding-left: 30px;
+      padding-left: 5px;
+    }
+    @media only screen and (max-width:  $break-sm){
+        text-align: center;
     }
     a::after {
       top: auto;
       bottom: 44px;
-      @media only screen and (max-width : 990px){
+      @media only screen and (max-width: $break-lg){
         top: 10px;
         bottom: auto;
         right: auto;
-        left: -37px;
+        left: -12px;
       }
     }
   }
   a {
     position: relative;
-    color: #7C7C7C;
+    color: $fastly-blue;
     padding: 10px 0;
     text-align: center;
-    border: 2px solid #0071bc;
+    border: 2px solid $fastly-blue;
     border-radius: 4px;
     padding: 3px 5px;
     text-decoration: none;
     transition: all 0.5s;
     &:hover, &.active {
-      color: red;
-      border-color: red;
+      color: $fastly-red;
+      border-color: $fastly-red;
       &::after {
-        border-color: red;
+        border-color: $fastly-red;
       }
     }
     &::after {
       content: '';
       width: 10px;
       height: 10px;
-      border: 2px solid #0071bc;
+      border: 2px solid $fastly-blue;
       border-radius: 10px;
       background: white;
       display: flex;
       position: absolute;
       top: 46px;
       left: 45%;
-      @media only screen and (max-width : 990px){
+      @media only screen and (max-width: $break-lg){
         top: 10px;
         left: auto;
-        right: -37px;
+        right: -12px;
+      }
+      @media only screen and (max-width: $break-sm){
+        display: none;
       }
     }
   }
-  &::before {
-    content: "";
-    border-left: 2px solid #0071bc;
+  &::before, &::after {
+    content: '';
     top: 1px;
     left: 0;
     position: relative;
     height: 10px;
     margin: auto 0;
   }
-  &::after {
-    content: "";
-    border-right: 2px solid #0071bc;
-    top: 1px;
-    right: 0;
-    position: relative;
-    height: 10px;
-    margin: auto 0;
+  &::before {
+    border-left: 2px solid $fastly-blue;
   }
-  @media only screen and (max-width : 990px){
+  &::after {
+    border-right: 2px solid $fastly-blue;
+  }
+  @media only screen and (max-width: $break-lg){
     flex-direction: column;
     margin: 20px 0;
     padding: 10px 0;
-    background: linear-gradient(to right, #0071bc 2px, white 2px);
-    background-size: 10%;
+    background: linear-gradient(90deg, transparent, $fastly-blue, transparent);
+    background-position: 50%;
     background-repeat: repeat-y;
-    background-position: 55.4% 0;
-    &::before {
-      content: "";
-      border-top: 2px solid #0071bc;
-      border-left: none;
-      top: -10px;
+    background-size: 3px 3px;
+    &::before, &::after {
       position: relative;
       width: 10px;
       margin: 0 auto;
     }
+    &::before {
+      top: -10px;
+      border-top: 2px solid $fastly-blue;
+      border-left: none;
+    }
     &::after {
-      content: "";
-      border-bottom: 2px solid #0071bc;
-      border-right: none;
       top: auto;
       bottom: -10px;
-      position: relative;
-      width: 10px;
-      margin: 0 auto;
+      border-bottom: 2px solid $fastly-blue;
+      border-right: none;
     }
   }
 }
@@ -158,15 +170,10 @@ h4 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background: linear-gradient(
-  to right,
-  transparent 0%,
-  transparent calc(50% - 0.81px),
-  #0071bc calc(50% - 0.8px),
-  #0071bc calc(50% + 0.8px),
-  transparent calc(50% + 0.81px),
-  transparent 100%
-  );
+  background: linear-gradient(90deg, transparent, $fastly-blue, transparent);
+  background-position: 50%;
+  background-repeat: repeat-y;
+  background-size: 3px 3px;
   padding: 20px 0;
   .unit {
     position: relative;
@@ -176,16 +183,16 @@ h4 {
     right: 1px;
     transition: all 0.5s;
     &.active {
-      background: #e9f5fb;
+      background: $fastly-blue-lightest;
       &::after {
-        border-color: red;
+        border-color: $fastly-red;
       }
     }
     &::after {
       content: '';
       width: 20px;
       height: 20px;
-      border: 2px solid #0071bc;
+      border: 2px solid $fastly-blue;
       border-radius: 10px;
       background: white;
       display: flex;
@@ -209,7 +216,7 @@ h4 {
   }
   &::before {
     content: "";
-    border-bottom: 2px solid #0071bc;
+    border-bottom: 2px solid $fastly-blue;
     top: -20px;
     position: relative;
     width: 40px;
@@ -217,7 +224,7 @@ h4 {
   }
   &::after {
     content: "";
-    border-bottom: 2px solid #0071bc;
+    border-bottom: 2px solid $fastly-blue;
     bottom: -20px;
     position: relative;
     width: 40px;
@@ -229,26 +236,26 @@ h4 {
   text-align: center;
   a {
     position: relative;
-    color: #7C7C7C;
+    padding: 5px 10px;
+    top: 2px;
+    color: $fastly-blue;
     text-align: center;
-    border: 2px solid #0071bc;
+    border: 2px solid $fastly-blue;
     border-radius: 4px;
-    padding: 3px 5px;
     text-decoration: none;
     transition: all 0.5s;
     font-size: 22px;
     font-weight: bold;
-    padding: 5px;
-    top: 2px;
     &:hover, &.active {
-      color: red;
-      border-color: red;
+      color: $fastly-red;
+      border-color: $fastly-red;
       &::after {
-        border-color: red;
+        border-color: $fastly-red;
       }
     }
   }
 }
+
 .hidden {
   transition: all 0.5s;
   height: 0;
@@ -262,29 +269,42 @@ h4 {
 }
 
 .divider {
-  border: 1px solid grey;
+  border: 1px solid $fastly-grey-dark;
   border-width: 1px 0 0;
   padding: 0;
 }
 
 .graph {
   position:relative;
+  color: $fastly-blue;
+}
+
+.graph-title {
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  &:hover {
+    text-decoration: none;
+  }
+  h2 {
+    color: $fastly-blue;
+  }
 }
 
 .data-point {
   position: absolute;
   height: 20px;
   width: 20px;
-  border: 2px solid #0071bc;
+  border: 2px solid $fastly-blue;
   border-radius: 10px;
   background: #fff;
   transition: all 0.5s;
   &.active {
-    border-color: red;
+    border-color: $fastly-red;
   }
 }
 
-.point-fern-1 { top: 52%; left: 47%; }
+.point-ferns-1 { top: 52%; left: 47%; }
 .point-debate1-1 { top: 60%; left: 22%; }
 .point-debate1-2 { top: 16%; left: 26% }
 .point-debate1-3 { top: 50%; left: 49% }
@@ -299,3 +319,30 @@ h4 {
 .point-debate3-1 { top: 46%; left: 45%; }
 .point-debate3-2 { top: 54%; left: 65% }
 .point-debate3-3 { top: 29%; left: 81% }
+.point-election-1 { top: 49%; left: 29% }
+.point-election-2 { top: 48%; left: 37% }
+.point-election-3 { top: 34%; left: 43% }
+.point-election-4 { top: 22%; left: 52% }
+.point-election-5 { top: 10%; left: 54% }
+.point-election-6 { top: 19%; left: 65.5% }
+.point-election-nyt-1 { top: 71%; left: 38% }
+.point-election-nyt-2 { top: 41%; left: 45% }
+.point-election-nyt-3 { top: 18%; left: 50% }
+.point-election-nyt-4 { top: 1%; left: 54.5% }
+
+@media only screen and (min-width : 1200px){
+  .point-debate1-1 { top: 60%; left: 23%; }
+  .point-debate1-2 { top: 16%; left: 26.5% }
+  .point-debate1-3 { top: 50%; left: 49% }
+  .point-debate-hrc-1 { top: 85%; left: 4% }
+  .point-debate-hrc-2 { top: 9%; left: 30.2% }
+  .point-debate-hrc-3 { top: 78%; left: 63.5% }
+  .point-debate-hrc-4 { top: 77%; left: 82.5% }
+  .point-debate2-1 { top: 57%; left: 13.5%; }
+  .point-debate2-2 { top: 68%; left: 20% }
+  .point-debate2-3 { top: 51%; left: 29.3% }
+  .point-debate2-4 { top: 34%; left: 75% }
+  .point-debate3-1 { top: 47%; left: 46%; }
+  .point-debate3-2 { top: 55%; left: 65% }
+  .point-debate3-3 { top: 29.5%; left: 81.5% }
+}
