update holiday data points

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -356,6 +356,51 @@ h4 {
 .point-election-nyt-3 { top: 18%; left: 50% }
 .point-election-nyt-4 { top: 1%; left: 54.5% }
 
+.point-ecommerce-1 { top: 55%; left: 18% }
+.point-ecommerce-2 { top: 44%; left: 25% }
+.point-ecommerce-3 { top: 53%; left: 32% }
+.point-ecommerce-4 { top: 31%; left: 35% }
+.point-ecommerce-5 { top: 42%; left: 41% }
+.point-ecommerce-6 { top: 43%; left: 73% }
+.point-ecommerce-7 { top: 49%; left: 73.5% }
+.point-ecommerce-8 { top: 30%; left: 82% }
+.point-ecommerce-9 { top: 33%; left: 88% }
+.point-ecommerce-10 { top: 70%; left: 90.5% }
+
+.point-shopify-1 { top: 51%; left: 6% }
+.point-shopify-2 { top: 65%; left: 14% }
+.point-shopify-3 { top: 42%; left: 29.5% }
+.point-shopify-4 { top: 21%; left: 37% }
+.point-shopify-5 { top: 27%; left: 41% }
+.point-shopify-6 { top: 45%; left: 79% }
+.point-shopify-7 { top: 25%; left: 88% }
+.point-shopify-8 { top: 31%; left: 95% }
+
+.point-food-1 { top: 51%; left: 7% }
+.point-food-2 { top: 29%; left: 18% }
+.point-food-3 { top: 71%; left: 23% }
+.point-food-4 { top: 71%; left: 34% }
+
+.point-giving-1 { top: 51%; left: 6% }
+.point-giving-2 { top: 44%; left: 17% }
+.point-giving-3 { top: 68%; left: 22% }
+.point-giving-4 { top: 69%; left: 48% }
+.point-giving-5 { top: 73%; left: 62% }
+.point-giving-6 { top: 73%; left: 76% }
+.point-giving-7 { top: 47%; left: 86% }
+.point-giving-8 { top: 67%; left: 90% }
+
+.point-aclu-1 { top: 45%; left: 7% }
+.point-aclu-2 { top: 34%; left: 17% }
+.point-aclu-3 { top: 55%; left: 21% }
+.point-aclu-4 { top: 68%; left: 35% }
+.point-aclu-5 { top: 70%; left: 48% }
+.point-aclu-6 { top: 77%; left: 63% }
+.point-aclu-7 { top: 77%; left: 77% }
+.point-aclu-8 { top: 37%; left: 86% }
+.point-aclu-9 { top: 72%; left: 90% }
+
+
 @media only screen and (min-width : 1200px){
   .point-debate1-1 { top: 60%; left: 23%; }
   .point-debate1-2 { top: 16%; left: 26.5% }
