holiday content is final!

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -380,6 +380,8 @@ h4 {
 .point-food-2 { top: 29%; left: 18% }
 .point-food-3 { top: 71%; left: 23% }
 .point-food-4 { top: 71%; left: 34% }
+.point-food-5 { top: 80%; left: 37% }
+.point-food-6 { top: 80%; left: 84% }
 
 .point-giving-1 { top: 51%; left: 6% }
 .point-giving-2 { top: 44%; left: 17% }
@@ -389,6 +391,7 @@ h4 {
 .point-giving-6 { top: 73%; left: 76% }
 .point-giving-7 { top: 47%; left: 86% }
 .point-giving-8 { top: 67%; left: 90% }
+.point-giving-9 { top: 34%; left: 95% }
 
 .point-aclu-1 { top: 45%; left: 7% }
 .point-aclu-2 { top: 34%; left: 17% }
